--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,7 @@
-# This is a basic workflow to help you get started with Actions
-
+# GitHub Action for generating a contribution graph with a snake eating your contributions.
 name: Generate Snake
 
-# Controls when the workflow will run
+# Controls when the action will run.
 on:
   schedule:
       # every 12 hours
@@ -10,18 +9,13 @@ on:
 
   # This command allows us to run the Action automatically from the Actions tab.
   workflow_dispatch:
-
   
-  # Triggers the workflow on push or pull request events but only for the "main" branch
+  # Also run on every push on the master branch
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches:
+    - main
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+# The sequence of runs in this workflow:
 jobs:
   # This workflow contains a single job called "build"
   build:
@@ -30,10 +24,9 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Clone repo
-      - uses: actions/checkout@v4
-
+        uses: actions/checkout@v3
+    
       - name: Generate the snake files in './dist/'
         uses: Platane/snk@v3
         id: snake-gif
@@ -57,4 +50,3 @@ jobs:
           commit_message: Update snake animations
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
